--- a/styles.css
+++ b/styles.css
@@ -52,3 +52,36 @@ header ul li a:hover {
 .toggle {
     display: none;
 }
+
+section {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 100vh;
+    padding: 150px 100px 100px;
+}
+
+section img {
+    max-width: 350px;
+    margin-left: 30px;
+}
+
+section h2 {
+    font-size: 2.5em;
+    text-transform: uppercase;
+}
+
+section p {
+    font-size: 18px;
+}
+
+section a {
+    display: inline-block;
+    padding: 8px 10px;
+    text-decoration: none;
+    font-size: 18px;
+    background: #111;
+    color: #fff;
+    margin-top: 20px;
+}
