--- a/styles.css
+++ b/styles.css
@@ -96,9 +96,23 @@ section:nth-last-child(odd) {
 }
 
 @media (max-width: 992px) {
+
+    section {
+        padding: 100px 50px 50px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+    }
+
+    section img {
+        margin: 50px 0 0;
+        max-width: 100%;
+    }
+
     header ul {
         position: absolute;
-        top: 80px;
+        top: -100%;
         left: 0;
         width: 100%;
         height: calc(100vh - 80px);
@@ -108,6 +122,14 @@ section:nth-last-child(odd) {
         transition: 0.5s;
         background: #111;
         flex-direction: column;
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+
+    header.active ul {
+        opacity: 1;
+        top: 80px;
+        transform: translateY(0);
     }
 
     header ul li a {
@@ -144,5 +166,17 @@ section:nth-last-child(odd) {
         background: #fff;
         z-index: 1;        
         transition: 0.5s;
+    }
+
+    header.active .toggle::before {
+        top: 14px;
+        transform: rotate(45deg);
+        box-shadow: 0 0 0 #fff;
+    }
+
+    header.active .toggle::after {
+        bottom: 14px;
+        transform: rotate(-45deg);
+        box-shadow: 0 0 0 #fff;
     }
 }
